--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_BulkOrderForm.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_BulkOrderForm.cshtml
@@ -2,8 +2,7 @@
 <fieldset>
     <legend>
         <label for="reference-number">
-            Enter the department and series number (e.g.
-            FO 371)
+            Enter the department and series number, for example FO 371
         </label>
     </legend>
     <p class="helper-text">
@@ -25,16 +24,11 @@
 </fieldset>
 
 <fieldset>
-    <legend>Enter between 20-40 documents (e.g. FO 371/114865)</legend>
+    <legend>Enter between 20-40 full catalogue references, for example FO 371/114865</legend>
     <p class="helper-text no-margin">
-        Order between 20 and 40 documents from the same
-        series.<br>
+        Order between 20 and 40 documents from the same series.<br>
     <p class="helper-text">
-        <a href="https://discovery.nationalarchives.gov.uk/"
-           target="_blank" rel="noreferrer noopenner">
-            Search our
-            catalogue to find catalogue references
-        </a>
+        <a target="_blank" rel="noreferrer noopener" href="https://discovery.nationalarchives.gov.uk/">Search our catalogue to find catalogue references.</a>
     </p>
 
     <div class="col-md-3 col-sm-12 col-xs-12">
