--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_StandardOrderForm.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_StandardOrderForm.cshtml
@@ -1,13 +1,9 @@
 ﻿@model DocumentOrderViewModel
 <fieldset>
-    <legend>Enter up to 12 documents (e.g. FO 371/114865)</legend>
-    <p class="helper-text no-margin">Order between 1 and 12 documents.</p>
+    <legend>Enter up to 12 full catalogue references</legend>
     <p class="helper-text">
-        <a href="https://discovery.nationalarchives.gov.uk/"
-           target="_blank" rel="noreferrer noopenner">
-            Search our
-            catalogue to find catalogue references
-        </a>
+        Documents can be from multiple series, for example ADM 22 and C 142.<br>
+        <a target="_blank" rel="noreferrer noopener" href="https://discovery.nationalarchives.gov.uk/">Search our catalogue to find catalogue references.</a>
     </p>
 
     <div class="col-md-3 col-sm-12 col-xs-12">
@@ -176,9 +172,9 @@
 </fieldset>
 
 <fieldset>
-    <legend>Enter up to 3 reserve documents (e.g. FO 371/114865)</legend>
+    <legend>Enter up to 3 reserve catalogue references</legend>
     <p class="helper-text">
-        You can provide three reserve catalogue references in case
+        You can provide 3 reserve catalogue references in case
         your first choices are unavailable.
     </p>
 
