--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -1,5 +1,21 @@
 ﻿main {
     background-color: #fff;
+    min-height: 600px;
+}
+
+h1 {
+    @media screen and (max-width: 768px) {
+        margin-top: 2em !important;
+        padding-bottom: 1em;
+        border-bottom: 4px solid #ddd;
+        font-size: 1.8em !important;
+    }
+}
+
+h3 {
+    @media screen and (max-width: 768px) {
+        margin-top: 3em !important;
+    }
 }
 
 a.button {
@@ -31,9 +47,13 @@ a.button {
 
 .standfirst {
     font-size: 1.1em;
-    margin-bottom: 3em !important;
-    font-family: $heading_font;
-    letter-spacing: -0.2px;
+    margin-bottom: 1.2em !important;
+    font-family: $body_font;
+    letter-spacing: 0;
+
+    @media screen and (min-width: 768px) {
+        font-size: 1.3em;
+    }
 
 
     p {
@@ -150,9 +170,10 @@ form {
 
 .document-list {
     margin: 2em 0 4em 0;
+    padding-left: 1em;
 
     li {
-        margin-bottom: 2em;
+        margin-bottom: 1em;
         padding-left: 1em;
         text-align: left;
 
@@ -414,6 +435,7 @@ form {
     min-height: 200px;
     min-width: 50%;
     padding: .6em;
+    width: 100%;
 
     @media (max-width: $screen-phone) {
         width: 100%;
@@ -517,7 +539,7 @@ form {
     border-top: 4px solid #ddd;
     border-bottom: 2px dotted #ddd;
 
-    @media (max-width: $screen-phone) {
+    @media screen and (max-width: 768px) {
         @include sr-only;
     }
 
@@ -555,7 +577,7 @@ form {
             letter-spacing: -0.3px;
         }
 
-        @media (max-width: $screen-tablet) {
+        @media screen and (max-width: 1189px) {
 
             li:not(.active) {
 
@@ -842,6 +864,7 @@ details {
 
         summary[tabindex='-1'] {
             color: #000000;
+            text-decoration: none;
 
             &:focus {
                 outline: none;
@@ -875,6 +898,24 @@ details {
     }
 }
 
+.kbs {
+    .optional-container {
+        padding: 2em 0 1em;
+        border-top: 4px solid #ddd !important;
+        border-bottom: 4px solid #ddd !important;
+        margin-bottom: 2em;
+
+        legend {
+            font-size: 1.25em !important;
+            margin-bottom: 1.2em;
+        }
+    }
+}
+
+.extra-margin {
+    margin-bottom: 2em !important;
+}
+
 .tna-breadcrumb {
 
     @media screen and (max-width: 768px) {
@@ -905,3 +946,29 @@ details {
         }
     }
 }
+
+.info-link {
+    font-weight: normal !important;
+    font-size: 0.9em;
+}
+
+.reduce-text {
+    font-size: 1em;
+}
+
+.warning {
+    font-weight: bold;
+    color: #d4351c;
+    width: 100%;
+    display: block;
+    padding: 0.1em 0.1em;
+}
+
+body {
+    .kbs {
+
+        .primary {
+            color: #fff !important;
+        }
+    }
+} 
