Update error page

--- a/book-a-reading-room-visit.web/Views/Shared/Error.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Error.cshtml
@@ -4,7 +4,5 @@
 
 @await Html.PartialAsync("Partials/_Breadcrumbs")
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-<span class="error-message full-width">Something went wrong. Please try again later.</span>
+<h1 class="margin-bottom">Server error</h1>
+<p>This page could not be loaded. Try reloading the page.</p>
