--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -17,8 +17,12 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
 
+    <link rel="shortcut icon" type="image/x-icon" href="~/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="~/images/favicon.png">
+
     <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
+    <script>
+    (function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
                 'gtm.start':
                     new Date().getTime(), event: 'gtm.js'
