--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -87,7 +87,7 @@
         @Html.AntiForgeryToken()
         @Html.HiddenFor(Model => Model.BookingReference)
         @Html.Hidden("seattype", Model.SeatType.ToStringURL())
-        <button type="submit" class="btn-link">Cancel and choose a different date</button>
+        <button type="submit" class="btn-link">Cancel and change date now</button>
     </form>
 
     <div class="text-center">
