--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -97,7 +97,7 @@
                     <h3>@(ViewData.ModelState.IsValid ? "You have 20 minutes to enter your details." : "Enter your details")</h3>
                     <span id="timer">Complete this page by @($"{Model.ExpiredBy:hh:mm tt}") British Summer Time (BST).</span>
                     <small>If you do not complete the form by this time we will cancel your seat and you will need to start the process again.</small>
-                    @Html.HiddenFor(Model => Model.CurrentTime)
+                    @Html.HiddenFor(Model => Model.TimeRemaining)
                 </div>
             </div>
         </div>
@@ -108,6 +108,7 @@
             <div class="row">
                 <div class="col-md-12">
                     @Html.AntiForgeryToken()
+                    @Html.HiddenFor(Model => Model.ExpiredBy)
                     @Html.HiddenFor(Model => Model.BookingReference)
                     @Html.Hidden("seattype", Model.SeatType.ToStringURL())
                     @Html.HiddenFor(Model => Model.BookingStartDate)
