--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -135,11 +135,13 @@
                 <ul>
                     @for (var index = 0; index < Model.AvailableBookings.Count; index++)
                     {
+                        var dateText = Model.BookingType == BookingTypes.StandardOrderVisit ? $"{Model.AvailableBookings[index].Date:dddd dd MMMM yyyy}" : 
+                                            $"{Model.AvailableBookings[index].Date:dddd dd} & {Model.AvailableBookings[index].Date.AddDays(1):dddd dd MMMM yyyy}";
                         <li class="date">
                             @if (Model.AvailableBookings[index].AvailableSeats < 1)
                             {
                                 <span class="col-md-12 col-sm-12 col-xs-12 no-availability">
-                                    <span class="col-md-6 col-sm-6 col-xs-6 align-left">@Model.AvailableBookings[index].ToDate</span>
+                                    <span class="col-md-6 col-sm-6 col-xs-6 align-left">@dateText</span>
                                     <span class="col-md-6 col-sm-6 col-xs-6 align-right">0 places available</span>
                                 </span>
                             }
@@ -151,7 +153,7 @@
                                     @Html.Hidden("bookingstartdate", Model.AvailableBookings[index].Date, new { id = "" })
                                     <button class="button" type="submit">
                                         <span class="col-md-12 col-sm-12 col-xs-12">
-                                            <span class="col-md-6 col-sm-6 col-xs-6 align-left">@Model.AvailableBookings[index].ToDate</span>
+                                            <span class="col-md-6 col-sm-6 col-xs-6 align-left">@dateText</span>
                                             <span class="col-md-6 col-sm-6 col-xs-6 align-right">@Model.AvailableBookings[index].AvailableSeats places available</span>
                                         </span>
                                     </button>
