--- a/book-a-reading-room-visit.web/Views/Booking/ReturnToBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/ReturnToBooking.cshtml
@@ -38,7 +38,7 @@
         <div class="rtn-to-booking">
             <div class="row">
                 <div class="col-md-12 align-left">
-                    <form action="@Url.Action("ReturnToBooking", "Booking")" class="rtn-to-booking-form" method="post">
+                    <form action="@Url.Action("ReturnToBooking", "Booking")" class="rtn-to-booking-form" method="post" novalidate>
                         @Html.AntiForgeryToken()
                         <fieldset>
                             <div class="form-row">
