--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -137,7 +137,7 @@
     <div class="order-form">
         <div class="row">
             <div class="col-md-12">
-                <form action="@Url.Action("OrderDocuments", "DocumentOrder", new { bookingType = @Model.BookingType.ToStringURL(), readerTicket = Model.ReaderTicket, bookingReference = Model.BookingReference } )" method="POST">
+                <form action="@Url.Action("OrderDocuments", "DocumentOrder", new { bookingType = @Model.BookingType.ToStringURL(), readerTicket = Model.ReaderTicket, bookingReference = Model.BookingReference } )" method="POST" novalidate>
                     @Html.AntiForgeryToken()
                     @Html.HiddenFor(Model => Model.BookingStartDate)
                     @Html.HiddenFor(Model => Model.CompleteByDate)
