--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -94,7 +94,7 @@
         <div class="row">
             <div class="col-md-12">
                 <script>
-                    window.seconds_since_date_selected = @Model.TimeRemaining;
+                    window.seconds_remaining = @Model.TimeRemaining;
                 </script>
                 <div id="enter-your-details-timer" class="full-width warning-panel">
                     <h3>@(ViewData.ModelState.IsValid ? "You have 20 minutes to enter your details." : "Enter your details")</h3>
