--- a/book-a-reading-room-visit.web/Views/Shared/Error.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Server error";
 }
 
 @await Html.PartialAsync("Partials/_Breadcrumbs")
