--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_FooterContent.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_FooterContent.cshtml
@@ -98,10 +98,10 @@
 
 <div class="row footer-base">
     <div class="col-xs-12 col-sm-9 col-md-9 ogl">
-        <a title="External website - opens in a new window" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/"> <img alt="Open Government License logo" src="https://www.nationalarchives.gov.uk/images/global/logo-ogl.png" /> <span class="sr-only">Opens in a new window</span> </a>
+        <a title="External website - opens in a new window" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/"> <img alt="Open Government License logo" src="~/images/logo-ogl.png" /> <span class="sr-only">Opens in a new window</span> </a>
         <p>All content is available under the <a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/">Open Government Licence v3.0</a>, <br />except where otherwise stated </p>
     </div>
     <div class="col-xs-12 col-sm-3 col-md-3 gov-uk">
-        <a class="footer-base-external-branding-gov-logo-adjust" title="External website - opens in a new window" href="https://gov.uk/" target="_blank" rel="noreferrer"> <img alt="GOV.UK logo" src="https://www.nationalarchives.gov.uk/images/global/gov-uk.png" /> <span class="sr-only">Opens in a new window</span> </a>
+        <a class="footer-base-external-branding-gov-logo-adjust" title="External website - opens in a new window" href="https://gov.uk/" target="_blank" rel="noreferrer"> <img alt="GOV.UK logo" src="~/images/gov-uk.png" /> <span class="sr-only">Opens in a new window</span> </a>
     </div>
 </div>
