--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
     <script src="~/js/mega-menu.js"></script>
     <script src="~/js/cookie-banner.js"></script>
     <script src="~/js/hide-room-info.js"></script>
-    <script src="~/js/toggle-reading-room.js"></script>
+    <script src="~/js/dist/toggle-reading-room.js"></script>
     <script src="~/js/book-a-reading-room-visit-0.0.1.js"></script>
 </body>
 </html>
