Add beta banner partial

--- a/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
 
+    @await Html.PartialAsync("Partials/_NotificationBanner") 
     @await Html.PartialAsync("Partials/_Header")
 
 
