--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -971,4 +971,49 @@ body {
             color: #fff !important;
         }
     }
-} 
+}
+
+.contact-footer {
+    margin: 3em 0 0;
+    border-top: 3px dotted #ddd;
+    padding: 2em;
+    text-align: center;
+
+    .first {
+        border: 0;
+        margin-bottom: 2em;
+    }
+
+
+    @media screen and (min-width: 992px) {
+        .first {
+            border-right: 2px dotted #ddd;
+            margin-bottom: 0;
+        }
+    }
+
+    h2 {
+        font-size: 1em !important;
+        font-weight: bold;
+
+
+        @media screen and (min-width: 768px) {
+            margin: 0;
+        }
+    }
+
+    a {
+        font-weight: bold !important;
+        color: #134571;
+        text-decoration: underline;
+
+        &:hover {
+            background-color: #134571;
+            color: #fff;
+        }
+    }
+
+    p {
+        margin: 2em 0 0.3em !important;
+    }
+}
