--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model book_a_reading_room_visit.model.AvailabilitySummaryModel
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Book a visit to view our documents - The National Archives";
 }
 
 @await Html.PartialAsync("Partials/_Breadcrumbs")
