--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -4,7 +4,7 @@
 @model BookingViewModel
 
 @{
-    ViewData["Title"] = "Secure booking";
+    ViewData["Title"] = $"Your details - {(Model.BookingType == BookingTypes.StandardOrderVisit ? "standard booking" : "bulk order booking")} - The National Archives";
 }
 
 @await Html.PartialAsync("Partials/_Breadcrumbs")
