--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
@@ -1,8 +1,11 @@
 ﻿@using book_a_reading_room_visit.model
 @using book_a_reading_room_visit.web.Helper
 @using book_a_reading_room_visit.web.Models
-@{ ViewData["Title"] = "Manage document order"; }
 @model OrderCompleteViewModel
+
+@{ 
+    ViewData["Title"] = $"Order summary - {(Model.BookingType == BookingTypes.StandardOrderVisit ? "standard booking" : "bulk order booking")} - The National Archives";
+}
 
 @await Html.PartialAsync("Partials/_Breadcrumbs")
 
